@@ -9,12 +9,14 @@ import application.displaybehaviour.ModelConfigObjectsGuiInformer;
 import application.kafka.listener.AssignedPartitionsInfo;
 import application.kafka.listener.Listener;
 import application.kafka.listener.Listeners;
-import application.logging.FixedRecordsCountLogger;
+import application.logging.FixedNumberRecordsCountLogger;
 import application.model.KafkaOffsetResetType;
 import application.model.modelobjects.KafkaListenerConfig;
 import application.model.modelobjects.KafkaTopicConfig;
 import application.utils.GuiUtils;
 import application.utils.ValidatorUtils;
+import application.utils.gui.FXNodeBlinker;
+import application.utils.gui.ColorChangableLabelWrapper;
 import com.sun.javafx.scene.control.skin.TextAreaSkin;
 import javafx.application.Platform;
 import javafx.beans.binding.BooleanBinding;
@@ -36,6 +38,7 @@ import javafx.scene.control.TextArea;
 import javafx.scene.control.TextField;
 import javafx.scene.control.ToggleButton;
 import javafx.scene.layout.AnchorPane;
+import javafx.scene.paint.Color;
 import org.apache.commons.lang3.StringUtils;
 
 import java.io.IOException;
@@ -84,7 +87,8 @@ public class ListenerConfigGuiController extends AnchorPane implements Displayab
     private Runnable refreshCallback;
     private ObservableList<KafkaTopicConfig> topicConfigs;
     private ToFileSaver toFileSaver;
-    private FixedRecordsCountLogger fixedRecordsLogger;
+    private FixedNumberRecordsCountLogger fixedRecordsLogger;
+    private final FXNodeBlinker assignedPartitionsBlinker = new FXNodeBlinker(Color.BLACK);
     private int totalReceivedMsgCounter = ZERO_RECEIVED_MSGS;
 
 
@@ -95,7 +99,7 @@ public class ListenerConfigGuiController extends AnchorPane implements Displayab
                                        Runnable refreshCallback,
                                        ObservableList<KafkaTopicConfig> topicConfigs,
                                        ToFileSaver toFileSaver,
-                                       FixedRecordsCountLogger fixedRecordsLogger) throws IOException {
+                                       FixedNumberRecordsCountLogger fixedRecordsLogger) throws IOException {
         this.parentPane = parentPane;
         this.guiInformer = guiInformer;
         this.toFileSaver = toFileSaver;
@@ -144,6 +148,11 @@ public class ListenerConfigGuiController extends AnchorPane implements Displayab
         addAdditionalOptionsToTextAreaPopupMenu();
         updateStatusLabelWithAssignedPartitionsInfo(AssignedPartitionsInfo.invalid());
         resetTotalReceivedLabeltext();
+        configurePartitionsAssignmentsChangedLabel();
+    }
+
+    private void configurePartitionsAssignmentsChangedLabel() {
+        assignedPartitionsBlinker.setNodeToBlink(new ColorChangableLabelWrapper(assignedPartitionsLabel));
     }
 
     private void configureFixedRecordLogger() {
@@ -226,11 +235,12 @@ public class ListenerConfigGuiController extends AnchorPane implements Displayab
     }
 
     private void updateStatusLabelWithAssignedPartitionsInfo(AssignedPartitionsInfo newValue) {
-        if (newValue == null || !newValue.isValid()) {
-            assignedPartitionsLabel.setText( DISCONNECTED_FROM_BROKER_STRING);
-        } else {
-            assignedPartitionsLabel.setText(StringUtils.join(newValue.getPartitionsList()));
+        String valueToSet = DISCONNECTED_FROM_BROKER_STRING;
+        if (newValue != null && newValue.isValid()) {
+            valueToSet = StringUtils.join(newValue.getPartitionsList());
         }
+        assignedPartitionsLabel.setText(valueToSet);
+        assignedPartitionsBlinker.blink();
     }
 
 
