@@ -67,10 +67,10 @@
                   <ToggleButton fx:id="detachPaneButton" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#detachButtonOnAction" text="Detach" GridPane.columnIndex="5" />
                   <CheckBox fx:id="receiveMsgLimitCheckBox" mnemonicParsing="false" text="Receive limit" GridPane.columnSpan="2" GridPane.halignment="LEFT" GridPane.rowIndex="5" />
                   <TextField fx:id="receiveMsgLimitTextField" GridPane.columnIndex="2" GridPane.rowIndex="5" />
-                  <Label fx:id="receivedTotalMsgLabel" text="Received msg total: &lt;DISCONNECTED FROM BROKER&gt;" GridPane.columnSpan="2147483647" GridPane.rowIndex="7" />
+                  <Label fx:id="receivedTotalMsgLabel" text="Received msg total : &lt;DISCONNECTED FROM BROKER&gt;" GridPane.columnSpan="2147483647" GridPane.rowIndex="7" />
                   <HBox GridPane.columnSpan="2147483647" GridPane.halignment="LEFT" GridPane.rowIndex="8">
                      <children>
-                        <Label text="Assigned partitions: " />
+                        <Label text="Assigned partitions : " />
                         <Label fx:id="assignedPartitionsLabel" contentDisplay="CENTER" text="&lt;DISCONNECTED FROM BROKER&gt; " wrapText="true" />
                      </children>
                   </HBox>
