@@ -1,0 +1,9 @@
+package application.utils.gui;
+
+import javafx.scene.paint.Color;
+
+public interface ColorChangable {
+
+    void changeColor(Color color);
+    void restoreOriginalColor();
+}
