@@ -2,14 +2,15 @@
 [v.1.0.3.0]
 - feature - added About window
     issue #4
-- feature - added topic names autocompleciton in topic config window
+- feature - added topic names autocompletion in topic config window
 - feature - user can define how many messages should be received by kafka listener
     issue #3, #5
 - feature - added saving kafka listener content to file (popup menu option)
 - fixed - regression: sending simulating mode working again
-- feature - added shared 'message template scripting'. Messge template content that is visible from
+- feature - added shared 'message template scripting'. Message template content that is visible from
     all senders. This can help in setting 'global variables' across all senders
 - feature - added how many message received counter
+- feature - show partitions assignments changes for kafka listener
 
 [v.1.0.2.0]
 - improvement - performance improvement (but more work needed)- log window can accept more entries before it freezes (!sic)
